--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-permission": "^6.16"
+        "livewire/livewire": "^3.6",
+        "robsontenorio/mary": "^1.41",
+        "shetabit/multipay": "^2.2",
+        "spatie/laravel-permission": "^6.16",
+        "wireui/wireui": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
