--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
         "filament/filament": "^3.3",
+        "ipe/smsir-php": "^1.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
